experiement_output/error_log/nondex-BTW-Community-BTW-gradle-fabric-example.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task891/wd/NonDex-plugin-test/github.com/BTW-Community/BTW-gradle-fabric-example/src/main/java/btw/community/example/ExampleAddon.java:3: error: cannot find symbol
import btw.AddonHandler;
          ^
  symbol:   class AddonHandler
  location: package btw
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task891/wd/NonDex-plugin-test/github.com/BTW-Community/BTW-gradle-fabric-example/src/main/java/btw/community/example/ExampleAddon.java:4: error: cannot find symbol
import btw.BTWAddon;
          ^
  symbol:   class BTWAddon
  location: package btw
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task891/wd/NonDex-plugin-test/github.com/BTW-Community/BTW-gradle-fabric-example/src/main/java/btw/community/example/ExampleAddon.java:6: error: cannot find symbol
public class ExampleAddon extends BTWAddon {
                                  ^
  symbol: class BTWAddon
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task891/wd/NonDex-plugin-test/github.com/BTW-Community/BTW-gradle-fabric-example/src/main/java/net/fabricmc/example/ExampleMod.java:3: error: cannot find symbol
import btw.AddonHandler;
          ^
  symbol:   class AddonHandler
  location: package btw
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task891/wd/NonDex-plugin-test/github.com/BTW-Community/BTW-gradle-fabric-example/src/main/java/net/fabricmc/example/mixin/ExampleMixin.java:3: error: cannot find symbol
import btw.BTWAddon;
          ^
  symbol:   class BTWAddon
  location: package btw
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task891/wd/NonDex-plugin-test/github.com/BTW-Community/BTW-gradle-fabric-example/src/main/java/net/fabricmc/example/mixin/ExampleMixin.java:9: error: cannot find symbol
@Mixin(BTWAddon.class)
       ^
  symbol: class BTWAddon
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task891/wd/NonDex-plugin-test/github.com/BTW-Community/BTW-gradle-fabric-example/src/main/java/net/fabricmc/example/mixin/ExampleMixin.java:9: warning: Error processing public targets: java.lang.ClassCastException: class java.lang.String cannot be cast to class javax.lang.model.type.TypeMirror (java.lang.String is in module java.base of loader 'bootstrap'; javax.lang.model.type.TypeMirror is in module java.compiler of loader 'platform')
@Mixin(BTWAddon.class)
^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task891/wd/NonDex-plugin-test/github.com/BTW-Community/BTW-gradle-fabric-example/src/main/java/net/fabricmc/example/mixin/ExampleMixin.java:9: error: Mixin has no targets
@Mixin(BTWAddon.class)
^
7 errors
1 warning

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 11s
